# TTS.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ggml-mul-mat-log.patch
.github/workflows/: build.yml  cmake-multi-platform.yml
cmake/: parler-config.cmake.in  parler.pc.in
examples/: CMakeLists.txt  args.cpp  args.h  args_common.cpp  args_common.h
examples/cli/: CMakeLists.txt  README.md  cli.cpp  parler_cli.cpp  playback.cpp  vad.cpp  vad.h  write_file.cpp  write_file.h
examples/perf_battery/: CMakeLists.txt  README.md  perf_battery.cpp
examples/phonemize/: CMakeLists.txt  README.md  phonemize.cpp
examples/quantize/: CMakeLists.txt  README.md  quantize.cpp  quantize_impl.cpp  quantize_impl.h  quantize_snapshot_test.sh
examples/server/: CMakeLists.txt  README.md  server.cpp  tts_server_thread_osx.h  tts_server_threading_osx.h
examples/server/public/: index.html
ggml-patches/: CMakeLists.txt
include/: args.h  audio_file.h  common.h  dac_model.h  dac_runner.h  imports.h  parler.h  parler_model.h  phonemizer.h  tokenizer.h  tts.h  util.h
phonemization_training/: phonemization_trainer.py  requirements.txt
py-gguf/: README.md  convert_kokoro_to_gguf  convert_parler_tts_to_gguf  convert_t5_encoder_to_gguf  parler_tts_gguf.py  requirements.txt  t5_encoder_gguf.py
py-gguf-kokoro/: README.md  convert_kokoro_to_gguf  kokoro_gguf.py  requirements.txt
py-gguf-parler-tts/: README.md  convert_parler_tts_to_gguf  parler_tts_gguf.py  requirements.txt
py-gguf/tts_encoders/: __init__.py  dia_gguf_encoder.py  kokoro_gguf_encoder.py  orpheus_gguf_encoder.py  parler_tts_gguf_encoder.py  tensor_util.py  tts_encoder.py
src/: CMakeLists.txt  args.cpp  conv1d_fast.cpp  dac_model.cpp  dac_model.h  dac_runner.cpp  dac_runner.h  dia_model.cpp  dia_model.h  general_neural_audio_codec.cpp  ggml-tts-ext.cpp  ggml-tts-ext.h  kokoro_model.cpp  kokoro_model.h  orpheus_model.cpp  orpheus_model.h  parler.cpp  parler_gguf.cpp  parler_gguf.h  parler_model.cpp  parler_model.h  phonemizer.cpp  sampler.cpp  sampler.h  snac_model.cpp  snake1d.cpp  t5_encoder_model.cpp  t5_encoder_model.h  tokenizer.cpp  tokenizer.h  tts.cpp  tts_ggml_iterator.h  tts_model.cpp  tts_model.h  util.cpp  util.h
src/models/: CMakeLists.txt  loaders.cpp  loaders.h
src/models/dia/: loader.cpp  model.cpp  model.h
src/models/dummy/: model.cpp
src/models/kokoro/: CMakeLists.txt  loader.cpp  model.cpp  model.h
src/models/orpheus/: loader.cpp  model.cpp  model.h
src/models/parler/: CMakeLists.txt  loader.cpp  model.cpp  model.h
